Added admin screens

--- a/html/admin/categories.html
+++ b/html/admin/categories.html
@@ -71,7 +71,7 @@
                <li>
                   <button
                      type="button"
-                     class="border border-[var(--secondary-color)] py-2 px-8 rounded-md rounded-e-none cursor-pointer bg-[var(--secondary-color)] text-white font-medium w-36"
+                     class="border border-[var(--primary-color)] rounded-md rounded-e-none py-2 px-8 cursor-pointer font-medium w-36"
                   >
                      Packs
                   </button>
@@ -80,7 +80,7 @@
                <li>
                   <button
                      type="button"
-                     class="border border-[var(--primary-color)] py-2 px-8 cursor-pointer font-medium w-36"
+                     class="border border-[var(--secondary-color)] py-2 px-8 cursor-pointer bg-[var(--secondary-color)] text-white font-medium w-36"
                   >
                      Categories
                   </button>
@@ -133,20 +133,7 @@
                            Name
                         </div>
                      </th>
-                     <th scope="col">
-                        <div
-                           class="text-left bg-black px-4 py-5 border border-black"
-                        >
-                           Price
-                        </div>
-                     </th>
-                     <th scope="col">
-                        <div
-                           class="text-left bg-black px-4 py-5 border border-black"
-                        >
-                           Categories
-                        </div>
-                     </th>
+
                      <th scope="col">
                         <div
                            class="text-left bg-black px-4 py-5 border border-black"
@@ -156,25 +143,19 @@
                      </th>
                      <th scope="col">
                         <div
-                           class="text-left bg-black px-4 py-5 border border-black"
+                           class="text-left bg-black px-4 py-5 border border-black text-nowrap"
                         >
-                           Date
+                           No of Packs
                         </div>
                      </th>
                      <th scope="col">
                         <div
                            class="bg-black text-left px-4 py-5 border border-black"
                         >
-                           Activities
+                           Featured Image
                         </div>
                      </th>
-                     <th scope="col">
-                        <div
-                           class="bg-black text-left px-4 py-5 border border-black"
-                        >
-                           Images
-                        </div>
-                     </th>
+
                      <th scope="col">
                         <div
                            class="bg-black text-left px-4 py-5 border border-black rounded-tr-md text-black"
@@ -190,34 +171,16 @@
                         <div
                            class="border-s p-4 bg-[var(--light-bg-color)] text-nowrap border-b border-b-[var(--primary-color)]"
                         >
-                           Petra and the Desert of Wadi Rum
-                        </div>
-                     </td>
-
-                     <td>
-                        <div
-                           class="p-4 bg-[var(--light-bg-color)] text-nowrap border-b border-b-[var(--primary-color)]"
-                        >
-                           1690€
-                        </div>
-                     </td>
-
-                     <td>
-                        <div
-                           class="p-4 bg-[var(--light-bg-color)] text-nowrap border-b border-b-[var(--primary-color)]"
-                        >
                            Desert
                         </div>
                      </td>
 
-                     <td class="bg-[var(--light-bg-color)]">
-                        <div class="border-b border-b-[var(--primary-color)]">
-                           <div
-                              class="p-4 bg-[var(--light-bg-color)] truncate w-36"
-                           >
-                              Lorem ipsum dolor sit amet consectetur,
-                              adipisicing elit. Totam, cupiditate.
-                           </div>
+                     <td>
+                        <div
+                           class="p-4 bg-[var(--light-bg-color)] text-nowrap border-b border-b-[var(--primary-color)] truncate"
+                        >
+                           Lorem ipsum dolor sit amet, consectetur adipiscing
+                           elit. Praesent
                         </div>
                      </td>
 
@@ -225,15 +188,7 @@
                         <div
                            class="p-4 bg-[var(--light-bg-color)] text-nowrap border-b border-b-[var(--primary-color)]"
                         >
-                           03/05/2025 - 06/05/2025
-                        </div>
-                     </td>
-
-                     <td>
-                        <div
-                           class="p-4 bg-[var(--light-bg-color)] text-nowrap border-b border-b-[var(--primary-color)]"
-                        >
-                           View
+                           4
                         </div>
                      </td>
 
@@ -272,32 +227,16 @@
                         <div
                            class="border-s p-4 text-nowrap border-b border-b-[var(--primary-color)]"
                         >
-                           Petra and the Desert of Wadi Rum
-                        </div>
-                     </td>
-
-                     <td>
-                        <div
-                           class="p-4 text-nowrap border-b border-b-[var(--primary-color)]"
-                        >
-                           1690€
-                        </div>
-                     </td>
-
-                     <td>
-                        <div
-                           class="p-4 text-nowrap border-b border-b-[var(--primary-color)]"
-                        >
                            Desert
                         </div>
                      </td>
 
                      <td>
-                        <div class="border-b border-b-[var(--primary-color)]">
-                           <div class="p-4 truncate w-36">
-                              Lorem ipsum dolor sit amet consectetur,
-                              adipisicing elit. Totam, cupiditate.
-                           </div>
+                        <div
+                           class="p-4 text-nowrap border-b border-b-[var(--primary-color)] truncate"
+                        >
+                           Lorem ipsum dolor sit amet, consectetur adipiscing
+                           elit. Praesent
                         </div>
                      </td>
 
@@ -305,15 +244,7 @@
                         <div
                            class="p-4 text-nowrap border-b border-b-[var(--primary-color)]"
                         >
-                           03/05/2025 - 06/05/2025
-                        </div>
-                     </td>
-
-                     <td>
-                        <div
-                           class="p-4 text-nowrap border-b border-b-[var(--primary-color)]"
-                        >
-                           View
+                           4
                         </div>
                      </td>
 
@@ -352,34 +283,16 @@
                         <div
                            class="border-s p-4 bg-[var(--light-bg-color)] text-nowrap border-b border-b-[var(--primary-color)]"
                         >
-                           Petra and the Desert of Wadi Rum
-                        </div>
-                     </td>
-
-                     <td>
-                        <div
-                           class="p-4 bg-[var(--light-bg-color)] text-nowrap border-b border-b-[var(--primary-color)]"
-                        >
-                           1690€
-                        </div>
-                     </td>
-
-                     <td>
-                        <div
-                           class="p-4 bg-[var(--light-bg-color)] text-nowrap border-b border-b-[var(--primary-color)]"
-                        >
                            Desert
                         </div>
                      </td>
 
-                     <td class="bg-[var(--light-bg-color)]">
-                        <div class="border-b border-b-[var(--primary-color)]">
-                           <div
-                              class="p-4 bg-[var(--light-bg-color)] truncate w-36"
-                           >
-                              Lorem ipsum dolor sit amet consectetur,
-                              adipisicing elit. Totam, cupiditate.
-                           </div>
+                     <td>
+                        <div
+                           class="p-4 bg-[var(--light-bg-color)] text-nowrap border-b border-b-[var(--primary-color)] truncate"
+                        >
+                           Lorem ipsum dolor sit amet, consectetur adipiscing
+                           elit. Praesent
                         </div>
                      </td>
 
@@ -387,15 +300,7 @@
                         <div
                            class="p-4 bg-[var(--light-bg-color)] text-nowrap border-b border-b-[var(--primary-color)]"
                         >
-                           03/05/2025 - 06/05/2025
-                        </div>
-                     </td>
-
-                     <td>
-                        <div
-                           class="p-4 bg-[var(--light-bg-color)] text-nowrap border-b border-b-[var(--primary-color)]"
-                        >
-                           View
+                           4
                         </div>
                      </td>
 
@@ -434,32 +339,16 @@
                         <div
                            class="border-s p-4 text-nowrap border-b border-b-[var(--primary-color)] rounded-bl-md"
                         >
-                           Petra and the Desert of Wadi Rum
-                        </div>
-                     </td>
-
-                     <td>
-                        <div
-                           class="p-4 text-nowrap border-b border-b-[var(--primary-color)]"
-                        >
-                           1690€
-                        </div>
-                     </td>
-
-                     <td>
-                        <div
-                           class="p-4 text-nowrap border-b border-b-[var(--primary-color)]"
-                        >
                            Desert
                         </div>
                      </td>
 
                      <td>
-                        <div class="border-b border-b-[var(--primary-color)]">
-                           <div class="p-4 truncate w-36">
-                              Lorem ipsum dolor sit amet consectetur,
-                              adipisicing elit. Totam, cupiditate.
-                           </div>
+                        <div
+                           class="p-4 text-nowrap border-b border-b-[var(--primary-color)]"
+                        >
+                           Lorem ipsum dolor sit amet, consectetur adipiscing
+                           elit. Praesent
                         </div>
                      </td>
 
@@ -467,15 +356,7 @@
                         <div
                            class="p-4 text-nowrap border-b border-b-[var(--primary-color)]"
                         >
-                           03/05/2025 - 06/05/2025
-                        </div>
-                     </td>
-
-                     <td>
-                        <div
-                           class="p-4 text-nowrap border-b border-b-[var(--primary-color)]"
-                        >
-                           View
+                           4
                         </div>
                      </td>
 
